--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                       </div>
                       <a href="project/project-details-02.html" class="show-portfolio">
                         <div class="yb-work-item-title">
-                          <h5>Website 2</h5>
+                          <h5>App Nhà Thông Minh</h5>
                           <!--<span>App</span>-->
                         </div>
                       </a>
