--- a/index-blog.html
+++ b/index-blog.html
@@ -136,7 +136,7 @@
       <div class="uk-container">
         <div data-uk-grid class="uk-grid-divider">
           <div class="uk-width-3-4@m yb-section-padding">
-            <h1 class="yb-section-title uk-heading-line"><span>Tổng hợp kiến thức</span></h1>
+            <h1 class="yb-section-title uk-heading-line"><span>Ký sự UI UX</span></h1>
             <div data-uk-grid class="uk-grid-medium uk-child-width-1-2@s uk-margin-medium-top">
               <div class="uk-width-1-1">
                 <a href="index-blog-1.html">
