--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
         </div>
       </div>
       <div class="uk-container">
-        <h2 class="yb-section-title uk-heading-line"><span>Tổng hợp kiến thức</span></h2>
+        <h2 class="yb-section-title uk-heading-line"><span>Ký sự UI UX</span></h2>
 
         <div data-uk-grid class="uk-grid-medium yb-margin-top-1 yb-margin-bottom-2">
           <div class="uk-width-2-3@m ">
