--- a/index-blog.html
+++ b/index-blog.html
@@ -338,7 +338,7 @@
                   <img src="src/img/empty.png" data-src="src/img/profile3.jpg" data-uk-img alt="" class="uk-border-rounded" />
                 </div>
                 <div class="uk-margin-remove ">
-                  <div class="yb-text-small uk-margin-small-top">Không chỉ là Blog, đây là nơi lưu trữ kinh nghiệm của mình trong thời gian gắn bó với UI UX
+                  <div class="yb-text-small uk-margin-small-top">Kinh nghiệm của mình trong thời gian gắn bó với UI UX
                   </div>
                 </div>
               </div>
