--- a/index-blog.html
+++ b/index-blog.html
@@ -143,7 +143,7 @@
                   <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/blog-1.png" data-uk-img>
                     <div class="uk-overlay uk-position-cover"> </div>
                     <div class="uk-overlay uk-position-top">
-                      <span class="uk-badge">UI Design</span>
+                      <span class="uk-badge">Life Story</span>
                     </div>
                     <div class="uk-overlay uk-position-bottom">
                       <h5 class="yb-blog-item-title uk-text-truncate">10 phong cách thiết kế của UI Design</h5>
@@ -167,7 +167,7 @@
                   <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/02.jpg" data-uk-img>
                     <div class="uk-overlay uk-position-cover"> </div>
                     <div class="uk-overlay uk-position-top">
-                      <span class="uk-badge">UX Design </span>
+                      <span class="uk-badge">Life Story</span>
                     </div>
                     <div class="uk-overlay uk-position-bottom">
                       <h5 class="yb-blog-item-title uk-text-truncate">Các bước của UX Design</h5>
@@ -191,7 +191,7 @@
                   <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/03.jpg" data-uk-img>
                     <div class="uk-overlay uk-position-cover"> </div>
                     <div class="uk-overlay uk-position-top">
-                      <span class="uk-badge">Write</span>
+                      <span class="uk-badge">Life Story</span>
                     </div>
                     <div class="uk-overlay uk-position-bottom">
                       <h5 class="yb-blog-item-title uk-text-truncate">Design System huyền thoại IOS</h5>
@@ -215,7 +215,7 @@
                   <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/04.jpg" data-uk-img>
                     <div class="uk-overlay uk-position-cover"> </div>
                     <div class="uk-overlay uk-position-top">
-                      <span class="uk-badge">Write</span>
+                      <span class="uk-badge">Life Story</span>
                     </div>
                     <div class="uk-overlay uk-position-bottom">
                       <h5 class="yb-blog-item-title uk-text-truncate">Khi nào trở thành Product Designer?</h5>
@@ -239,7 +239,7 @@
                   <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/05.jpg" data-uk-img>
                     <div class="uk-overlay uk-position-cover"> </div>
                     <div class="uk-overlay uk-position-top">
-                      <span class="uk-badge">UI Design</span>
+                      <span class="uk-badge">Life Story</span>
                     </div>
                     <div class="uk-overlay uk-position-bottom">
                       <h5 class="yb-blog-item-title uk-text-truncate">Design Trend năm 2023</h5>
@@ -263,7 +263,7 @@
                   <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/05.jpg" data-uk-img>
                     <div class="uk-overlay uk-position-cover"> </div>
                     <div class="uk-overlay uk-position-top">
-                      <span class="uk-badge">---</span>
+                      <span class="uk-badge">Life Story</span>
                     </div>
                     <div class="uk-overlay uk-position-bottom">
                       <h5 class="yb-blog-item-title uk-text-truncate">Comming Soon</h5>
@@ -287,7 +287,7 @@
                   <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/03.jpg" data-uk-img>
                     <div class="uk-overlay uk-position-cover"> </div>
                     <div class="uk-overlay uk-position-top">
-                      <span class="uk-badge">---</span>
+                      <span class="uk-badge">Life Story</span>
                     </div>
                     <div class="uk-overlay uk-position-bottom">
                       <h5 class="yb-blog-item-title uk-text-truncate">Comming Soon</h5>
