--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
         </div>
       </div>
       <div class="uk-container">
-        <h2 class="yb-section-title uk-heading-line"><span>Ký sự UI UX</span></h2>
+        <h2 class="yb-section-title uk-heading-line"><span>Ký sự </span></h2>
 
         <div data-uk-grid class="uk-grid-medium yb-margin-top-1 yb-margin-bottom-2">
           <div class="uk-width-2-3@m ">
@@ -1054,17 +1054,17 @@
             </a>
           </div>
           <div class="uk-width-1-3@m uk-width-1-2@s">
-            <a href="#">
-              <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/02.jpg" data-uk-img>
+            <a href="index-blog-2.html">
+              <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/blog2.png" data-uk-img>
                 <div class="uk-overlay uk-position-cover"> </div>
                 <div class="uk-overlay uk-position-top">
                   <span class="uk-badge">UX Design</span>
                 </div>
                 <div class="uk-overlay uk-position-bottom">
-                  <h5 class="yb-blog-item-title uk-text-truncate">Các bước của UX Design</h5>
+                  <h5 class="yb-blog-item-title uk-text-truncate">Phương pháp UX nên áp dụng?</h5>
                   <div class="yb-blog-item-meta">
                     <div>
-                      <span>19 Tháng 5, 2023</span>
+                      <span>20 Tháng 5, 2023</span>
                     </div>
                     <!--<div>
                       <span data-uk-icon="comment"></span> 120
@@ -1077,82 +1077,11 @@
               </div>
             </a>
           </div>
-          <div class="uk-width-1-3@m uk-width-1-2@s">
-            <a href="#">
-              <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/03.jpg" data-uk-img>
-                <div class="uk-overlay uk-position-cover"> </div>
-                <div class="uk-overlay uk-position-top">
-                  <span class="uk-badge">Write</span>
-                </div>
-                <div class="uk-overlay uk-position-bottom">
-                  <h5 class="yb-blog-item-title uk-text-truncate">Design System huyền thoại: 'IOS'</h5>
-                  <div class="yb-blog-item-meta">
-                    <div>
-                      <span>19 Tháng 5, 2023</span>
-                    </div>
-                    <!--<div>
-                      <span data-uk-icon="comment"></span> 120
-                    </div>
-                    <div>
-                      <span data-uk-icon="heart"></span> 89
-                    </div>-->
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="uk-width-1-3@m uk-width-1-2@s">
-            <a href="#">
-              <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/04.jpg" data-uk-img>
-                <div class="uk-overlay uk-position-cover"> </div>
-                <div class="uk-overlay uk-position-top">
-                  <span class="uk-badge">Write</span>
-                </div>
-                <div class="uk-overlay uk-position-bottom">
-                  <h5 class="yb-blog-item-title uk-text-truncate">Khi nào thì trở thành Product Designer?</h5>
-                  <div class="yb-blog-item-meta">
-                    <div>
-                      <span>19 Tháng 5, 2023</span>
-                    </div>
-                    <!--<div>
-                      <span data-uk-icon="comment"></span> 120
-                    </div>
-                    <div>
-                      <span data-uk-icon="heart"></span> 89
-                    </div>-->
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="uk-width-1-3@m uk-width-1-2@s">
-            <a href="#">
-              <div class="yb-blog-item uk-background-cover" data-src="src/img/blog/05.jpg" data-uk-img>
-                <div class="uk-overlay uk-position-cover"> </div>
-                <div class="uk-overlay uk-position-top">
-                  <span class="uk-badge">UI Design</span>
-                </div>
-                <div class="uk-overlay uk-position-bottom">
-                  <h5 class="yb-blog-item-title uk-text-truncate">Design Trend năm 2023</h5>
-                  <div class="yb-blog-item-meta">
-                    <div>
-                      <span>19 Tháng 5, 2023</span>
-                    </div>
-                    <!--<div>
-                      <span data-uk-icon="comment"></span> 120
-                    </div>
-                    <div>
-                      <span data-uk-icon="heart"></span> 89
-                    </div>-->
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
+
         </div>
 
         <h5 class="uk-heading-line uk-text-right uk-text-bold">
-          <a href="index-blog.html" class="uk-link-heading">Tất cả bài viết
+          <a class="uk-link-heading">Tất cả bài viết
             <span data-uk-icon="icon:arrow-right; ratio: 2"></span>
           </a>
         </h5>
